style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body, html {
  height: 100%;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: #000;
}

.clickable-text {
  color: white;
  cursor: pointer;
  font-size: 40px;
  transition: opacity 1s ease;
}

#videoContainer {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  justify-content: center;
  align-items: center;
}

#video {
  width: 640px;
  height: 360px;
  opacity: 0;
  transition: opacity 1s ease;
}

#closeButton {
  position: absolute;
  top: 20px;
  right: 20px;
  color: white;
  background: red;
  border: none;
  padding: 10px;
  cursor: pointer;
  border-radius: 25px;
}

h1 {
  text-decoration: none;
  margin-bottom: 20px;
}

.center-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.hidden {
  opacity: 0;
}

.center-credits-container {
  position: relative;
}

#creditsBtn {
  position: fixed;
  top: 20px;
  right: 20px;
  padding: 10px 20px;
  font-size: 8px;
  cursor: pointer;
  color: white;
  background: red;
  border: none;
  border-radius: 25px;
  z-index: 1000;
}

#creditsContainer {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  justify-content: center;
  align-items: center;
  background-color: #000;
}

#creditsImg {
  /* width: 640px;
  height: 360px;
  opacity: 0;
  transition: opacity 1s ease; */
  max-width: 80%; /* Adjust the max width to make it larger */
  max-height: 80%; /* Adjust the max height to fit the viewport */
  height: auto; /* Maintain aspect ratio */
  width: auto; /* Maintain aspect ratio */
  margin: 20px 0; /* Add some margin for spacing */
  opacity: 0;
  transition: opacity 1s ease;
}

#closeCreditsButton {
  position: absolute;
  top: 20px;
  right: 20px;
  color: white;
  background: red;
  border: none;
  padding: 10px;
  cursor: pointer;
  border-radius: 25px;
}

#loadingContainer {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  justify-content: center;
  align-items: center;
  background-color: #000;
}

#loadingContainer img {
  max-width: 80%; /* Adjust the max width to make it larger */
  max-height: 80%; /* Adjust the max height to fit the viewport */
  height: auto; /* Maintain aspect ratio */
  width: auto; /* Maintain aspect ratio */
  margin: 20px 0; /* Add some margin for spacing */
  opacity: 0;
  transition: opacity 1s ease;
}

